--- a/src/index.html
+++ b/src/index.html
@@ -149,7 +149,7 @@
   <div class="container py-5">
     <div class="row text-center justify-content-center">
       <h2>Download the extension</h2>
-      <p class="py-3 w-lg-50">Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati nam delectus, quod
+      <p class="py-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati nam delectus, quod
         repellendus, eum! Lorem ipsum dolor</p>
     </div>
     <div class="row g-4 py-3 py-lg-0">
@@ -190,6 +190,156 @@
             </div>
           </div>
         </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+<section class="faqs">
+  <div class="container py-5">
+    <div class="row text-center justify-content-center">
+      <h2>Frequently Asked Questions</h2>
+      <p class="py-3 w-lg-50">Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati nam delectus, quod
+        repellendus, eum! Lorem ipsum dolor</p>
+    </div>
+    <div class="row">
+      <div class="col-lg-14 mx-auto">
+        <div class="accordion accordion-flush" id="accordionFlushExample">
+          <div class="accordion-item">
+            <h2 class="accordion-header" id="flush-headingOne">
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+                What is bookmark?
+              </button>
+            </h2>
+            <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne"
+              data-bs-parent="#accordionFlushExample">
+              <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the
+                <code>.accordion-flush</code> class. This is the first item's accordion body.
+              </div>
+            </div>
+          </div>
+          <div class="accordion-item">
+            <h2 class="accordion-header" id="flush-headingTwo">
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
+                How can i request a new browser?
+              </button>
+            </h2>
+            <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo"
+              data-bs-parent="#accordionFlushExample">
+              <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the
+                <code>.accordion-flush</code> class. This is the second item's accordion body. Let's imagine this being
+                filled
+                with some actual content.
+              </div>
+            </div>
+          </div>
+          <div class="accordion-item">
+            <h2 class="accordion-header" id="flush-headingThree">
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
+                Is there a mobile app?
+              </button>
+            </h2>
+            <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree"
+              data-bs-parent="#accordionFlushExample">
+              <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the
+                <code>.accordion-flush</code> class. This is the third item's accordion body. Nothing more exciting
+                happening
+                here in terms of content, but just filling up the space to make it look, at least at first glance, a bit
+                more
+                representative of how this would look in a real-world application.
+              </div>
+            </div>
+          </div>
+          <div class="accordion-item">
+            <h2 class="accordion-header" id="flush-headingFour">
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                data-bs-target="#flush-collapseFour" aria-expanded="false" aria-controls="flush-collapseFour">
+                WHat about other Chromium browsers?
+              </button>
+            </h2>
+            <div id="flush-collapseFour" class="accordion-collapse collapse" aria-labelledby="flush-headingFour"
+              data-bs-parent="#accordionFlushExample">
+              <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the
+                <code>.accordion-flush</code> class. This is the third item's accordion body. Nothing more exciting
+                happening
+                here in terms of content, but just filling up the space to make it look, at least at first glance, a bit
+                more
+                representative of how this would look in a real-world application.
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="py-3 d-grid col-10 col-lg-5 mx-auto">
+          <button class="btn btn-primary" type="button">More info</button>
+        </div>
+      </div>
+
+      <!-- <a href="#" class="btn btn-primary mt-3">More info</a> -->
+    </div>
+  </div>
+
+</section>
+
+<section class="cta-bottom py-5">
+
+  <div class="container py-5">
+
+    <div class="row">
+      <div class="text-center text-white">
+        <p class="text-uppercase">35,000 already joined</p>
+        <h2 class="pb-4">Stay up-to-date with what we're doing</h2>
+      </div>
+      <div class="col-lg-8 mx-auto">
+        <!-- Bootstrap 5 starter form -->
+        <form id="contactForm">
+
+          <!-- Email address input -->
+          <div class="row align-items-center text-center text-lg-start">
+            <div class="col-lg-14">
+              <input class="form-control" id="emailAddress" type="email" placeholder="Enter your email address"
+                data-sb-validations="required, email" />
+              <div class="invalid-feedback" data-sb-feedback="emailAddress:required">Email Address is required.</div>
+              <div class="invalid-feedback" data-sb-feedback="emailAddress:email">Email Address Email is not valid.
+              </div>
+            </div>
+            <div class="col-lg-10 mt-4 mt-lg-0">
+              <button class="btn btn-secondary" type="submit">Contact Us</button>
+            </div>
+          </div>
+
+          <!-- Form submissions success message -->
+          <div class="d-none" id="submitSuccessMessage">
+            <div class="text-center mb-3">Form submission successful!</div>
+          </div>
+
+          <!-- Form submissions error message -->
+          <div class="d-none" id="submitErrorMessage">
+            <div class="text-center text-danger mb-3">Error sending message!</div>
+          </div>
+        </form>
+      </div>
+    </div>
+  </div>
+
+</section>
+
+<section class="footer d-none d-lg-flex py-5">
+  <div class="container">
+    <div class="row justify-content-between">
+      <div class="col-lg-10 d-lg-flex justify-content-between align-items-center">
+        <a href="#">
+          <img class="img-fluid" src="/src/assets/images/logo-bookmark-white.svg">
+        </a>
+        <a href="#">Features</a>
+        <a href="#">Pricing</a>
+        <a href="#">Contact</a>
+      </div>
+      <div class="col-lg-4 d-lg-flex justify-content-between">
+        <a href="#">Facebook</a>
+        <a href="#">Twitter</a>
       </div>
     </div>
   </div>
